    to «postinst configure», which might consider this a first install instead
    of an upgrade. Closes: #801156
  * Fix memory leaks in dpkg infodb format upgrade logic.
  * Fix physical file offset comparison in dpkg. Closes: #808912
    Thanks to Yuri Gribov <tetra2005@gmail.com>.
  * Do not accept empty field names in dpkg. Closes: #769111

 -- Guillem Jover <guillem@debian.org>  Sat, 19 Mar 2016 19:13:34 +0100

dpkg (1.16.17) wheezy-security; urgency=high

  [ Guillem Jover ]
  * Fix an off-by-one write access in dpkg-deb when parsing the .deb magic.
    Reported by Jacek Wielemborek <d33tah@gmail.com>. Closes: #798324
  * Fix an off-by-one write access in dpkg-deb when parsing the old format
    .deb control member size. Thanks to Hanno Böck <hanno@hboeck.de>.
    Fixes CVE-2015-0860.
  * Fix an off-by-one read access in dpkg-deb when parsing ar member names.
    Thanks to Hanno Böck <hanno@hboeck.de>.

  [ Updated programs translations ]
  * Catalan (Jordi Mallach).

  [ Updated man page translations ]
  * Fix incorrect translation in German (Helge Kreutzmann)

 -- Guillem Jover <guillem@debian.org>  Wed, 25 Nov 2015 22:34:58 +0100

dpkg (1.16.16) wheezy-security; urgency=high

  [ Guillem Jover ]
  * Do not leak long tar names on bogus or truncated archives.
  * Do not leak the filepackages iterator when a directory is used by other
    packages.
  * Do not leak color string on «dselect --color».
  * Fix memory leaks when parsing alternatives.
  * Fix memory leaks in buffer_copy() on error conditions.
  * Fix possible out of bounds buffer read access in the error output on
    bogus ar member sizes.
  * Fix file triggers/Unincorp descriptor leak on subprocesses. Regression
    introduced with the initial triggers implementation in dpkg 1.14.17.
    Closes: #751021
  * Fix a descriptor leak on dselect subprocesses when --debug is used.
  * Do not run qsort() over the scandir() list in libcompat if it is NULL.