@@ -18,6 +18,9 @@ dpkg (1.16.18) UNRELEASED; urgency=medium
   * Fix physical file offset comparison in dpkg. Closes: #808912
     Thanks to Yuri Gribov <tetra2005@gmail.com>.
   * Do not accept empty field names in dpkg. Closes: #769111
+  * When sys_siglist is defined in the system, try to use NSIG as we cannot
+    compute the array size with sizeof(). If NSIG is missing fallback to 32
+    items. Prompted by Igor Pashev <pashev.igor@gmail.com>.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 19 Mar 2016 19:13:34 +0100
 
